# wemake-django-rest

./: README.md  pyproject.toml
test_project/: .gitlab-ci.yml  Pipfile  README.md
test_project/config/: .env.template
test_project/docker/: docker-compose.prod.yml
test_project/server/: urls.py
test_project/server/main_app/: urls.py  views.py
test_project/server/main_app/templates/main_app/: index.html
test_project/server/settings/components/: common.py
test_project/server/settings/environments/: development.py
test_project/server/wemake_python_rest/: api.py  controller.py  endpoint.py  method.py  types.py
test_project/server/wemake_python_rest/schemas/: inspectors.py  views.py
test_project/sql/: create_database.sql  drop_database.sql
wemake_django_rest/: methods.py
