[tool.poetry]
name = "wemake-django-rest"
version = "0.0.1"
description = "Create Django REST APIs the right way, no magic intended"

license = "MIT"

authors = [
  "sobolevn <mail@sobolevn.me>"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
pytest-randomly = "^1.2"
pytest-isort = "^0.2"
pytest = "^3.9"
flake8-pytest = "^1.3"
mypy = "^0.641"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
